syntax = "proto3";

message FieldIdentifierPayload {
    string field_id = 1;
    string grid_id = 2;
}
