syntax = "proto3";
import "view.proto";

message ViewInfo {
    string id = 1;
    string belong_to_id = 2;
    string name = 3;
    string desc = 4;
    ViewDataType data_type = 5;
    RepeatedView belongings = 6;
    ViewExtData ext_data = 7;
}
message ViewExtData {
    ViewFilter filter = 1;
    ViewGroup group = 2;
    ViewSort sort = 3;
}
message ViewFilter {
    string object_id = 1;
}
message ViewGroup {
    string group_object_id = 1;
    oneof one_of_sub_group_object_id { string sub_group_object_id = 2; };
}
message ViewSort {
    string object_id = 1;
}
message UpdateViewInfoPayload {
    string view_id = 1;
    oneof one_of_filter { ViewFilter filter = 2; };
    oneof one_of_group { ViewGroup group = 3; };
    oneof one_of_sort { ViewSort sort = 4; };
}
